--- a/client/scss/movie-details.scss
+++ b/client/scss/movie-details.scss
@@ -40,6 +40,7 @@ $screen-ultrahigh-min: 1200px;
 
       #movieDetailsTitle {
         text-align: center;
+        padding-left: 0;
       }
 
       #movieDetailsYear {
@@ -48,6 +49,7 @@ $screen-ultrahigh-min: 1200px;
 
       #movieDetailsOverview {
         text-align: justify;
+        padding-left: 0;
         h5 {
           font-size: 1.2em;
         }
@@ -58,33 +60,33 @@ $screen-ultrahigh-min: 1200px;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        padding: 0;
 
         .crewMember {
-          text-align: center;
-          color: white;
+          text-align: left;
           padding: 0;
 
           h4 {
             font-size: 1em;
-            margin-top: 3em;
-            margin-bottom: 0.2em;
           }
+        }
 
-          h5 {
-            margin-top: 0.2em;
-            margin-bottom: 0.2em;
-            opacity: 0.7;
-          }
+        #youtubeTrailerHigh {
+          display: none;
+        }
+
+        #youtubeTrailerMedium {
+          display: block;
         }
       }
 
       #movieDetailsCredit {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        padding-left: 0;
 
         .creditMember {
-          text-align: center;
+          text-align: right;
 
           h5 {
             margin-top: 0.2em;
@@ -94,11 +96,20 @@ $screen-ultrahigh-min: 1200px;
 
         .creditMemberPic {
           box-shadow: 3px 3px 5px #888888;
-          max-height: 6em;
+          max-height: 3em;
           margin-left: 0.5em;
           margin-right: 0.5em;
           margin-top: 0.4em;
           margin-bottom: 0.5;
+        }
+      }
+
+      #movieDetailsHomepage {
+
+        text-align: center;
+        margin-top: 0.5em;
+        a {
+          color: white;
         }
       }
     }
@@ -109,66 +120,99 @@ $screen-ultrahigh-min: 1200px;
 
   #movieDetailsContainer {
     padding-left: 0;
-    background-color: #C7C9C9;
+    padding: 0;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0+0,0.65+100 */
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+
     box-shadow: 3px 3px 5px #888888;
 
     #movieDetailsPoster {
       padding-left: 0;
     }
 
-    #movieDetailsTitle {
-      text-align: center;
-    }
+    #movieDetailsContent {
 
-    #movieDetailsYear {
-      text-align: center;
-    }
+      padding: 0;
+      min-height: 100%;
 
-    #movieDetailsOverview {
-      text-align: justify;
-      h5 {
-        font-size: 1.2em;
-      }
-    }
-
-    #movieDetailsCrew {
-
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-
-      .crewMember {
+      #movieDetailsTitle {
         text-align: center;
+      }
 
-        h4 {
-          margin-top: 0.2em;
-          margin-bottom: 0.2em;
-        }
+      #movieDetailsYear {
+        text-align: center;
+      }
 
+      #movieDetailsOverview {
+        text-align: justify;
+        padding-left: 0;
         h5 {
-          margin-top: 0.2em;
-          margin-bottom: 0.2em;
+          font-size: 1.2em;
         }
       }
-    }
 
-    #movieDetailsCredit {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      #movieDetailsCrew {
 
-      .creditMember {
-        text-align: center;
-        margin-right: 1em;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        padding: 0;
+
+        .crewMember {
+          text-align: left;
+          padding: 0;
+
+          h4 {
+            font-size: 1em;
+          }
+        }
+
+        #youtubeTrailerHigh {
+          display: block;
+        }
+
+        #youtubeTrailerMedium {
+          display: none;
+        }
       }
 
-      .creditMemberPic {
-        box-shadow: 3px 3px 5px #888888;
-        max-height: 8em;
-        margin-left: 2em;
-        margin-right: 2em;
-        margin-top: 2em;
-        margin-bottom: 0.5;
+      #movieDetailsCredit {
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 0;
+
+        .creditMember {
+          text-align: right;
+
+          h5 {
+            margin-top: 0.2em;
+            margin-bottom: 0.2em;
+          }
+        }
+
+        .creditMemberPic {
+          box-shadow: 3px 3px 5px #888888;
+          max-height: 4em;
+          margin-left: 0em;
+          margin-right: 0.5em;
+          margin-top: 0.3em;
+          margin-bottom: 0.3;
+        }
+      }
+
+      movieDetailsHomepage {
+
+        text-align: center;
+        margin-top: 0.5em;
+        a {
+          color: white;
+        }
       }
     }
   }
