--- a/client/scss/discover.scss
+++ b/client/scss/discover.scss
@@ -30,7 +30,8 @@ $screen-ultrahigh-min: 1200px;
     }
 
     #discoveryChooserButtons {
-      text-align: center;
+      display: flex;
+      justify-content: flex-end;
 
       div {
         padding: 0;
