--- a/client/hbs/index.hbs
+++ b/client/hbs/index.hbs
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../csslib/bootstrap-theme.min.css" media="screen" charset="utf-8">
     <link rel="stylesheet" href="../csslib/bootstrap.min.css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="../csslib/font-awesome.css">
+    <link rel="stylesheet" href="../csslib/font-awesome.min.css">
     <link rel="stylesheet" href="{{ cssPath "allscss.css" }}" media="screen" charset="utf-8">
   </head>
   <body>
