--- a/client/scss/movie-details.scss
+++ b/client/scss/movie-details.scss
@@ -8,6 +8,17 @@ $screen-ultrahigh-min: 1200px;
 
   #movieDetailsContainer {
 
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&amp;0+0,0.65+100 */
+    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 ); /* IE6-9 */
+
+    box-shadow: 3px 3px 5px #888888;
+
     margin-top: 1.5em;
 
     #movieDetailsPoster {
@@ -15,7 +26,8 @@ $screen-ultrahigh-min: 1200px;
       text-align: center;
 
       img {
-        max-height: 28em;
+        max-height: 30em;
+        box-shadow: 3px 3px 5px #888888;
       }
     }
 
@@ -23,10 +35,15 @@ $screen-ultrahigh-min: 1200px;
       padding: 0;
 
       #movieDetailsTitle {
+        text-align: center;
 
         h3 {
           margin-top: 1em;
         }
+      }
+
+      #movieDetailsYear {
+        text-align: center;
       }
 
       #movieDetailsOverview {
@@ -40,26 +57,47 @@ $screen-ultrahigh-min: 1200px;
         display: flex;
         flex-wrap: wrap;
         padding-left: 0;
+        color: #F0F0F0;
 
-        .creditMember {
-          text-align: right;
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
+        table {
+          width: 100%;
 
-          td {
-            border: 0px;
+          .creditMember {
+            width: 100%;
+            text-align: right;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            #credtiPicTd {
+              width: 15%;
+            }
+
+            #creditCharacter {
+              width: 42%;
+            }
+
+            #creditActor {
+              width: 42%;
+            }
+
+            td {
+              justify-content: space-between;
+              padding-left: 0.5em;
+              padding-bottom: 0.2em;
+              border: 0px;
+            }
+
+            h5 {
+              margin-top: 0.2em;
+              margin-bottom: 0.2em;
+            }
           }
 
-          h5 {
-            margin-top: 0.2em;
-            margin-bottom: 0.2em;
+          .creditMemberPic {
+            box-shadow: 3px 3px 5px #888888;
+            max-height: 3em;
           }
-        }
-
-        .creditMemberPic {
-          box-shadow: 3px 3px 5px #888888;
-          max-height: 3em;
         }
       }
 
@@ -81,6 +119,7 @@ $screen-ultrahigh-min: 1200px;
       }
 
       #movieDetailVideo {
+        text-align: center;
         padding: 0;
       }
 
