--- a/client/scss/discover.scss
+++ b/client/scss/discover.scss
@@ -34,6 +34,7 @@ $screen-ultrahigh-min: 1200px;
         i {
           font-size: 2em;
         }
+
       }
 
       .bootstrapBtn {
@@ -47,6 +48,10 @@ $screen-ultrahigh-min: 1200px;
 
       .fontawesomeBtn:active {
         color: blue;
+      }
+
+      .fontawesomeBtnText {
+        margin-bottom: 0;
       }
     }
   }
@@ -73,8 +78,19 @@ $screen-ultrahigh-min: 1200px;
     div {
       text-align: center;
     }
-  }
 
+    .bootstrapBtn {
+
+    }
+
+    .fontawesomeBtn {
+      display: none;
+    }
+
+    .fontawesomeBtnText {
+      display: none;
+    }
+  }
 }
 
 @media(min-width: $screen-ultrahigh-min) {
@@ -95,6 +111,18 @@ $screen-ultrahigh-min: 1200px;
 
     div {
       text-align: center;
+    }
+
+    .bootstrapBtn {
+
+    }
+
+    .fontawesomeBtn {
+      display: none;
+    }
+
+    .fontawesomeBtnText {
+      display: none;
     }
   }
 
